--- a/.github/workflows/cx.yml
+++ b/.github/workflows/cx.yml
@@ -44,6 +44,6 @@ jobs:
         sca_password: ${{ secrets.SCA_PASSWORD }}  
         incremental: false
         break_build: false
-        scanners: sast
+        scanners: sca
         #bug_tracker: GITHUBPULL
         params: --namespace=${{ github.repository_owner }} --repo-name=${{ github.event.repository.name }} --branch=${{ github.head_ref }} --merge-id=${{ github.event.number }}
