--- a/.github/workflows/cx.yml
+++ b/.github/workflows/cx.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Checkmarx CxFlow Action
       uses: checkmarx-ts/checkmarx-cxflow-github-action@v1.1
       with:
-        project: ${{ github.repository }}-PR
+        project: JVLDemo-PR
         team: /CxServer/SP/Company/Users
         checkmarx_url: ${{ secrets.CHECKMARX_URL }}   # To be stored in GitHub Secrets.
         checkmarx_username: ${{ secrets.CHECKMARX_USERNAME }}  # To be stored in GitHub Secrets.
@@ -42,6 +42,7 @@ jobs:
         sca_tenant: ${{ secrets.SCA_TENANT }}
         sca_username: ${{ secrets.SCA_USERNAME }}
         sca_password: ${{ secrets.SCA_PASSWORD }}  
+        multi-tenant: false 
         incremental: false
         break_build: false
         scanners: sca
